Fixed scrollbar, top toolbar etc

--- a/src/app/kanban/board-list/board-list.component.scss
+++ b/src/app/kanban/board-list/board-list.component.scss
@@ -3,32 +3,13 @@
   padding: 24px;
   display: flex;
   flex-direction: row;
-  overflow-x: scroll;
-  &::-webkit-scrollbar {
-    height: 4px;
-    width: 4px
-  }
-  &::-webkit-scrollbar-track {
-//    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #000;
-  }
-  &::-webkit-scrollbar {
-    width: 3px;
-    background-color: #000;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #f5f5f5;
-    border: 2px solid #555555;
-  }
 
   .handle {
     position: absolute;
-    right: 4px;
+    right: 10px;
     cursor: move;
   }
 }
-
 
 .cdk-drag-placeholder {
   opacity: 0.2;
@@ -46,14 +27,15 @@
   transition: transform 300ms ease;
 }
 
-
 .board-button {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border: 5px gray dashed;
-  width: 300px;
-  padding: 32px;
+  min-width: 300px;
+  max-width: 300px;
   height: 350px;
+  padding: 10px;
+  margin: 10px;
 }
