--- a/src/app/kanban/board/board.component.scss
+++ b/src/app/kanban/board/board.component.scss
@@ -11,8 +11,12 @@
   margin-top: -1.5em !important;
 }
 
-.title{
+.card-header{
   margin: 0px 0px 0px -1rem;
+}
+
+.title{
+  cursor: pointer;
 }
 
 .inner-card {
